# zephyr-apps

./: CMakeLists.txt  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: teledatics_kimchi.overlay
app/src/: main.c  rpmsg_config.h  rsc_table.c  vsprintf.c  vsprintf.c.bak
boards/arm/teledatics/: Kconfig.board  Kconfig.defconfig  linker.ld  teledatics_imx8mm-pinctrl.dtsi  teledatics_imx8mm.dts  teledatics_imx8mm.overlay  teledatics_imx8mm.yaml  teledatics_imx8mm_dbgconfig  teledatics_imx8mm_dbgconfig2  teledatics_imx8mm_defconfig  teledatics_imx8mm_minimal  teledatics_imx8mm_rel
boards/arm/teledatics/doc/: index.rst
boards/arm/teledatics_kimchi/: Kconfig.board  Kconfig.defconfig  board.cmake  teledatics_kimchi.dts  teledatics_kimchi.yaml  teledatics_kimchi_defconfig
boards/arm/teledatics_kimchi/doc/: index.rst
drivers/: CMakeLists.txt  Kconfig
drivers/rpmsg_lite/: CMakeLists.txt  Kconfig
drivers/rpmsg_lite/rpmsg_lite/: CMakeLists.txt  Kconfig  rpmsg_lite.c
lib/: CMakeLists.txt
lib/rpmsg_lite/: rpmsg_default_config.h  rpmsg_env_specific.h  rpmsg_env_zephyr.c  rpmsg_lite.c  rpmsg_platform.c  rpmsg_queue.c  virtqueue.c
